# simpledrawing

./: CMakeLists.txt  README.md  Shape2D.cpp  Shape2D.h  SimpleDrawing.rc  main.cpp  resource.h
